# polars-result

./: .gitignore  README.md  output.text  pyproject.toml  typing_output.txt
.github/workflows/: CI.yml  python-publish.yml
.zed/: settings.json
__marimo__/session/: test_result.py.json
example/: basic.py  basic_result.py  chaining.py  polars_pipeline.py  showcase.py
example/__marimo__/session/: showcase.py.json
src/polars_result/: __init__.py  decorators.py  exceptions.py  formatting.py  option.py  polars_result.py  result.py
tests/: test_option.py  test_polars_result.py  test_result.py
