[project]
name = "polars-result"
version = "0.1.0"
description = "Railway-oriented Result type for Polars data pipelines"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Attica-oss", email = "g.mounac@gmail.com" }]
keywords = ["polars", "result", "railway-oriented-programming", "error-handling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "polars>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------- ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "ANN",   # flake8-annotations
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "ANN401",  # dynamically typed expressions (typing.Any)
    "UP046",   # Generic[] → PEP 695 type params (needs method-level support)
]

[tool.ruff.lint.isort]
known-first-party = ["polars_result"]

# ---------- ty ----------
[tool.ty.environment]
python-version = "3.14"

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------- hatchling ----------
[project.urls]
Homepage = "https://github.com/Attica-OSS/polars-result"
Repository = "https://github.com/Attica-OSS/polars-result"
Issues = "https://github.com/Attica-OSS/polars-result/issues"

